fix: imageGrid spacing

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -135,6 +135,7 @@ main.tempBackground
       width: 100%
       cursor: pointer
       transition: width $transition-space-sideways
+      border-bottom: 1px solid rgba(0,0,0,0)
   @media screen and ( min-width: $breakpoint-mobile)
     li:nth-child(2)
       .imageGrid-Item_Wrapper
